# Extremistan

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_SOURCES.md  README.md  SECURITY.md  SPEC.md  extremistan.py  pyproject.toml  sp500_history_1927_2025.csv
docs/: logic_review.md
docs/adr/: 0001-use-hill-estimator.md  0002-adaptive-tail-estimation.md  0002-modular-architecture.md  0003-density-based-weather-alpha.md  0004-adaptive-tail-estimation.md  0005-adaptive-fragility-refinements.md  0006-fred-data-source.md  0007-dashboard-restructure.md  0007-probabilistic-put-engine.md  0008-rename-to-market-monitor.md  001-modular-architecture.md
scripts/: fetch_offline_data.py  verify_data_access.py  verify_engine.py  verify_regime_matrix.py
src/extremistan/: main.py
src/extremistan/analytics/: __init__.py  math_lib.py  regime.py
src/extremistan/data/: adapters.py  store.py
src/extremistan/strategy/: __init__.py  probabilistic_engine.py  signal_engine.py
src/extremistan/ui/: __init__.py  dashboard.py
src/market_monitor/: __init__.py  main.py
src/market_monitor/analytics/: math_lib.py
src/market_monitor/data/: __init__.py  adapters.py  interfaces.py  manager.py  store.py
src/market_monitor/ui/: dashboard.py  reporter.py
tests/: conftest.py  test_adaptive_logic.py  test_analytics.py  test_data.py  test_strategy.py  test_visualization_smoke.py
