[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extremistan"
version = "0.2.0"
description = "Tail-risk estimation tool for financial markets"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "yfinance>=0.2.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
extremistan = "extremistan.main:main"

[tool.setuptools.packages.find]
where = ["src"]
