[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market_monitor"
version = "0.2.0"
description = "Market statistics and tail-risk monitor"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "yfinance>=0.2.0",
    "pyarrow>=10.0.0",
    "pandas-datareader>=0.10.0",
    "setuptools>=61.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
market_monitor = "market_monitor.main:main"

[tool.setuptools.packages.find]
where = ["src"]
